--- a/prepros.config
+++ b/prepros.config
@@ -1164,6 +1164,17 @@
         }
       },
       {
+        "file": "pug/pages/contacts.pug",
+        "config": {
+          "autoCompile": true,
+          "tasks": {
+            "minify-html": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
         "file": "pug/pages/default/contacts.pug",
         "config": {
           "tasks": {
@@ -1247,6 +1258,72 @@
         }
       },
       {
+        "file": "pug/pages/nodes.pug",
+        "config": {
+          "autoCompile": true,
+          "tasks": {
+            "minify-html": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
+        "file": "pug/pages/product/catalog.pug",
+        "config": {
+          "autoCompile": true,
+          "tasks": {
+            "minify-html": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
+        "file": "pug/pages/product/detail.pug",
+        "config": {
+          "autoCompile": true,
+          "tasks": {
+            "minify-html": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
+        "file": "pug/pages/projects/catalog.pug",
+        "config": {
+          "autoCompile": true,
+          "tasks": {
+            "minify-html": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
+        "file": "pug/pages/projects/detail.pug",
+        "config": {
+          "autoCompile": true,
+          "tasks": {
+            "minify-html": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
+        "file": "pug/pages/recycling.pug",
+        "config": {
+          "autoCompile": true,
+          "tasks": {
+            "minify-html": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
         "file": "pug/pages/reviews/reviews.pug",
         "config": {
           "tasks": {
@@ -1299,6 +1376,39 @@
       {
         "file": "pug/pages/services/detail-3-wake.pug",
         "config": {
+          "tasks": {
+            "minify-html": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
+        "file": "pug/pages/vacancies.pug",
+        "config": {
+          "autoCompile": true,
+          "tasks": {
+            "minify-html": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
+        "file": "pug/pages/vacancies/catalog.pug",
+        "config": {
+          "autoCompile": true,
+          "tasks": {
+            "minify-html": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
+        "file": "pug/pages/vacancies/detail.pug",
+        "config": {
+          "autoCompile": true,
           "tasks": {
             "minify-html": {
               "enable": false
