--- a/prepros.config
+++ b/prepros.config
@@ -1247,6 +1247,17 @@
         }
       },
       {
+        "file": "pug/pages/news/catalog.pug",
+        "config": {
+          "autoCompile": true,
+          "tasks": {
+            "minify-html": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
         "file": "pug/pages/news/detail.pug",
         "config": {
           "autoCompile": true,
@@ -1270,6 +1281,17 @@
       },
       {
         "file": "pug/pages/product/catalog.pug",
+        "config": {
+          "autoCompile": true,
+          "tasks": {
+            "minify-html": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
+        "file": "pug/pages/product/detail-factory.pug",
         "config": {
           "autoCompile": true,
           "tasks": {
