--- a/prepros.config
+++ b/prepros.config
@@ -1657,7 +1657,7 @@
         "file": "scss/style.sass",
         "config": {
           "sourceMap": true,
-          "customOutput": "style.css"
+          "customOutput": "style-theme.css"
         }
       },
       {
